crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-caption.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
\begin{longtable}[]{@{}l@{}}
\caption{A caption}\tabularnewline
\toprule\noalign{}
Header \\
\midrule\noalign{}
\endfirsthead
\toprule\noalign{}
Header \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Cell \\
\end{longtable}
