crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-cell-attr-quoted-pipe.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}l@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
cell with a pipe inside the attribute \\
spanning cell \\
\end{longtable}
}
