crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-cell-attrs.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}l@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
styled \\
right aligned \\
classy \\
\end{longtable}
}
