crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-cell-line-markers.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}
  >{\raggedright\arraybackslash}p{(\linewidth - 0\tabcolsep) * \real{1.0000}}@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
* first line literal

\begin{itemize}
\tightlist
\item
  second line list
\end{itemize} \\
\end{longtable}
}
