crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-ragged.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
a & b \\
& \\
c & d \\
\end{longtable}
}
