crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__table-spans.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
\multicolumn{2}{@{}l@{}}{%
wide} \\
a & b \\
\multirow{2}{*}{tall} & top \\
& bottom \\
\end{longtable}
}
