crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__tables.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
{\def\LTcaptype{none} % do not increment counter
\begin{longtable}[]{@{}ll@{}}
\toprule\noalign{}
Name & Age \\
\midrule\noalign{}
\endhead
\bottomrule\noalign{}
\endlastfoot
Alice & 30 \\
Bob & 25 \\
\end{longtable}
}
