crates/carta/tests/snapshots/golden_e2e__mediawiki__latex__unterminated-tag.snap
---
source: crates/carta/tests/golden_e2e.rs
expression: output
---
A tag that never closes: \textless a keeps going as text.

Something that is not a tag at all: \textless notatag lingers here.

A lone bracket \textless{} on its own stays literal.
